# object_detection_app_uv

./: Dockerfile  README.md  main.py  pyproject.toml
static/: index.html
